--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "vite": "^4.5.2",
     "glob": "^8.1.0"
   },
-  "author": "Olga Blud <olga.blud@gmail.com>",
+  "author": "Olga  <olga.blud@gmail.com>",
   "license": "ISC",
   "dependencies": {
     "vite-plugin-full-reload": "^1.0.5",
